test/resources/invalid/typecheck/InvalidNumberArray.flo
action STUB_ACTION = stub();

flow MY_FLOW = {
    number[] myNumberArray = [false, true, false];
    STUB_ACTION >> myNumberArray;
}
